fixed spacing in welcome screen

--- a/the-hour-of-happiness/src/pages/welcomePage.css
+++ b/the-hour-of-happiness/src/pages/welcomePage.css
@@ -13,4 +13,5 @@
 
 .welcome-message {
     font-size: 3vw !important;
+    margin-bottom: 5rem;
 }
